fix(auth): resolve TypeScript middleware type error
- Add proper Promise<void> return type to auth middleware
- Fix Express Request type declaration for user property
- Ensure consistent error handling in authentication flow

This commit resolves type-safety issues in the authentication middleware while maintaining existing functionality.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "skipLibCheck": true,                     // Skip type checking of declaration files
       "forceConsistentCasingInFileNames": true  // Disallow inconsistently-cased references to the same file
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+    "include": ["src/**/*", "types.d.ts"],
+    "exclude": ["node_modules", "**/*.spec.ts"],
+    "files": ["types.d.ts"]
   }
